# echelle

./: .buildinfo  .gitignore  CHANGES.rst  README.md  asymp_example.ipynb  example.ipynb  example_strectched_echelle.ipynb  genindex.html  index.html  objects.inv  paper.md  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  speedup.ipynb
.github/workflows/: docs.yml
_modules/: index.html
_modules/echelle/: echelle.html  interact.html  utils.html
_sources/notebooks/: backend.ipynb.txt
_sources/user/: install.rst.txt
data/: 11615890.txt  8144907.seis
docs/: conf.py  index.rst
docs/api/: api.rst
docs/notebooks/: example.ipynb  quickstart.ipynb
docs/paper/: paper.md
docs/user/: api.rst  citation.rst  install.rst
echelle/: __init__.py  echelle.py  interact.py  stretching.py  utils.py  version.py
notebooks/: backend.html  quickstart.html
tests/: test_echelle.py
user/: api.html  citation.html  install.html
