[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "echelle"
version = "1.5.2"
authors = [
    {name = "Daniel Hey"},
]
description = "A Python package for plotting and interacting with echelle diagrams."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bokeh",
    'importlib-metadata; python_version<"3.8"',
    'ipywidgets'
]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[tool.setuptools]
packages = ["echelle"]